# racal

./: Cargo.toml  README.md  deny.toml
.config/: extra.dic
src/: lib.rs  reqwest.rs
