[package]
name = "racal"
version = "0.0.0-alpha.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ljoonal"]
description = "REST API client abstraction library"
repository = "https://github.com/onlivfe/racal"
keywords = ["api", "declarative", "rest", "http", "api", "abstraction"]
categories = ["api-bindings", "network-programming", "web-programming::http-client"]

include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "racal"
path = "src/lib.rs"

[dependencies]
serde = "1"
serde_json = "1"
